# geany-plugins

./: .gitignore  Makefile.am  configure.ac
addons/: addons.plugin.in
addons/src/: Makefile.am
autoclose/: autoclose.plugin.in
autoclose/src/: Makefile.am
automark/: automark.plugin.in
automark/src/: Makefile.am
codenav/: codenav.plugin.in
codenav/src/: Makefile.am
commander/: commander.plugin.in
commander/src/: Makefile.am
debugger/: debugger.plugin.in
debugger/src/: Makefile.am
defineformat/: defineformat.plugin.in
defineformat/src/: Makefile.am
devhelp/: devhelp.plugin.in
devhelp/src/: Makefile.am
geanyctags/: geanyctags.plugin.in
geanyctags/src/: Makefile.am
geanydoc/: geanydoc.plugin.in
geanydoc/src/: Makefile.am
geanyextrasel/: geanyextrasel.plugin.in
geanyextrasel/src/: Makefile.am
geanygendoc/: geanygendoc.plugin.in
geanygendoc/src/: Makefile.am
geanyinsertnum/: geanyinsertnum.plugin.in
geanyinsertnum/src/: Makefile.am
geanylatex/: geanylatex.plugin.in
geanylatex/src/: Makefile.am
geanylipsum/: geanylipsum.plugin.in
geanylipsum/src/: Makefile.am
geanylua/: Makefile.am  geanylua.plugin.in
geanymacro/: geanymacro.plugin.in
geanymacro/src/: Makefile.am
geanyminiscript/: geanyminiscript.plugin.in
geanyminiscript/src/: Makefile.am
geanynumberedbookmarks/: geanynumberedbookmarks.plugin.in
geanynumberedbookmarks/src/: Makefile.am
geanypg/: geanypg.plugin.in
geanypg/src/: Makefile.am
geanyprj/: geanyprj.plugin.in
geanyprj/src/: Makefile.am
geanypy/: geanypy.plugin.in
geanypy/src/: Makefile.am
geanysendmail/: geanysendmail.plugin.in
geanysendmail/src/: Makefile.am
geanyvc/: geanyvc.plugin.in
geanyvc/src/: Makefile.am
geniuspaste/: geniuspaste.plugin.in
geniuspaste/src/: Makefile.am
gproject/: gproject.plugin.in
gproject/src/: Makefile.am
markdown/: markdown.plugin.in
markdown/src/: Makefile.am
multiterm/: multiterm.plugin.in
multiterm/src/: Makefile.am
pairtaghighlighter/: pairtaghighlighter.plugin.in
pairtaghighlighter/src/: Makefile.am
peas-support/: Makefile.am  peas-support.c
pohelper/: pohelper.plugin.in
pohelper/src/: Makefile.am
pretty-printer/: pretty-printer.plugin.in
pretty-printer/src/: Makefile.am
scope/: scope.plugin.in
scope/src/: Makefile.am
shiftcolumn/: shiftcolumn.plugin.in
shiftcolumn/src/: Makefile.am
spellcheck/: spellcheck.plugin.in
spellcheck/src/: Makefile.am
tableconvert/: tableconvert.plugin.in
tableconvert/src/: Makefile.am
treebrowser/: treebrowser.plugin.in
treebrowser/src/: Makefile.am
updatechecker/: updatechecker.plugin.in
updatechecker/src/: Makefile.am
webhelper/: webhelper.plugin.in
webhelper/src/: Makefile.am
xmlsnippets/: xmlsnippets.plugin.in
xmlsnippets/src/: Makefile.am
